Add new api endpoint to download a set of selected files by zipping them first preserving the folder structure
